Sync all content

--- a/content/resources/28.md
+++ b/content/resources/28.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: f97971ba-34d6-6075-4089-d485b31b5172
 resourcetype: Image
 title: 28 students enrolled
 uid: d631076f-71ae-5ad4-cd85-f9ded50d8265
