--- a/content/resources/mit21w_747s15_rr02.md
+++ b/content/resources/mit21w_747s15_rr02.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information regarding ethics tool chest.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21w-747-rhetoric-spring-2015/504af4327f31d77079628bf2ec273e69_MIT21W_747S15_rr02.pdf
 file_type: application/pdf
+parent_uid: 16cadfbc-58ff-0e59-c208-3527b7fd6e97
 resourcetype: Document
 title: Ethics Tool Chest
 uid: 504af432-7f31-d770-7962-8bf2ec273e69
